Fix figure references not being visible in feedback

--- a/src/scss/phy/questions.scss
+++ b/src/scss/phy/questions.scss
@@ -126,6 +126,9 @@
     code {
       background-color: transparent;
     }
+    .figure-reference {
+      color: white;
+    }
   }
 }
 
